<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignIn" >

    <TextView
        android:id="@+id/labelSIUserName"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/title_username" />

    <EditText
        android:id="@+id/textSIUserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/labelSIUserName"
        android:layout_marginBottom="15dp"
        android:layout_toRightOf="@id/labelSIUserName"
        android:inputType="text" />

    <TextView
        android:id="@+id/labelSIPassword"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelSIUserName"
        android:layout_marginBottom="20dp"
        android:text="@string/title_password" />

    <EditText
        android:id="@+id/textSIPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/labelSIPassword"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@id/labelSIPassword"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/labelSIPassword"
        android:text="@string/title_signin" />

    <TextView
        android:id="@+id/buttonMoveSignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/buttonSignIn"
        android:layout_below="@id/labelSIPassword"
        android:layout_toLeftOf="@id/buttonSignIn"
        android:text="@string/title_signup" />

</RelativeLayout>